--- a/app/_blog-article.html
+++ b/app/_blog-article.html
@@ -54,7 +54,7 @@
             <a class="home-btn blog-article-btn" href="#">Zur Anmeldung</a>
 
         </div>
-        <div class="blog-article-block">
+        <div class="blog-article-block" style="background-image: url(img/unclem.png);">
             <h3>Dein Coach – Res Kocher</h3>
             <ul>
                 <li>Coach Informatik</li>
