--- a/app/_coaching-job.html
+++ b/app/_coaching-job.html
@@ -2,7 +2,7 @@
 	<div class="container breadcrumbs-container">
         <div class="breadcrumbs-way">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
         </div>
         <div class="breadcrumbs-item">
@@ -23,7 +23,7 @@
 	</div>
     <div class="container breadcrumbs-back">
         <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="angebot.html">
+            <a class="breadcrumbs-img" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="breadcrumbs-text">Zurück</div>
