--- a/app/_footer.html
+++ b/app/_footer.html
@@ -24,7 +24,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
