--- a/app/_index-content.html
+++ b/app/_index-content.html
@@ -1,6 +1,47 @@
 <!-- Start Page -->
 <div class="container pt-5 pb-5">
-    <div class="row">
+    <ul>
+        <li>
+            <h1>
+                <strong>home</strong>
+            </h1>
+            <a class="general-link" href="home.html">home</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="search-of-trial-missions.html">search of trial missions</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="job-search.html">job search</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="looking-job.html">looking job</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="coaching-training.html">coaching training</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="professional-clarification.html">professional clarification</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="coaching-job.html">coaching job</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="hire-person.html">hire person</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="support-in-everyday-work.html">support in everyday work</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="advanced-training.html">advanced training</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="blog-article.html">blog article</a>
+        </li>
+        <li>
+           <span>zum Stelleninserat</span> - <a class="general-link" href="job-description.html">job description</a>
+        </li>
+     </ul>
+    <!-- <div class="row">
         <div class="col-4">
             <ul>
                 <li class="mb-3">
@@ -94,5 +135,5 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
 </div>
