--- a/app/about-us.html
+++ b/app/about-us.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -95,167 +95,135 @@
        <div class="our-team">
            <div class="home-title current-title">Unser Team</div>
            <div class="row">
-               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block our-team-block-mob">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-left">
+                    <div class="our-team-block our-team-block-mob" style="background-image: url(img/natascha-nikolic.png);">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
-                                <li class="our-team-li"><strong class="our-team-strong">MAS PHSG </strong> Supervision & Organisationsberatung</li>
-                                <li class="our-team-li">Systemische Organisationsberaterin, Supervisorin & Coach BSO</li>
-                                <li class="our-team-li"><strong class="our-team-strong">Diplomierte Sozialpädagogin FHNW </strong></li>
-                                <li class="our-team-li">20 Jahre Erfahrung in der Begleitung, Beratung & Unterstützung von Menschen aus dem Spektrum, <strong>Referentin & Autorin</strong></li>
+                                <li><strong>MAS PHSG </strong> Supervision & Organisationsberatung</li>
+                                <li>Systemische Organisationsberaterin, Supervisorin & Coach BSO</li>
+                                <li><strong>Diplomierte Sozialpädagogin FHNW </strong></li>
+                                <li>20 Jahre Erfahrung in der Begleitung, Beratung & Unterstützung von Menschen aus dem Spektrum, <strong>Referentin & Autorin</strong></li>
                             </ul>
                         </div>
                     </div>
                     <img class="our-team-img-mob" src="img/uder_nik.png" alt="img">
                     <h3 class="our-team-title">Natascha Nikolic</h3>
                     <div class="our-team-text team-indent">Geschäftsführerin und Inhaberin inAut GmbH</div>
-                    <div class="our-team-link our-team-text">
-                        <a href="tel:+41 79 242 83 83">+41 79 242 83 83</a>
-                    </div>
-                    <div class="our-team-link our-team-text">
-                        <a href="malito:natascha.nikolic@inaut.ch">natascha.nikolic@inaut.ch</a>
-                    </div>
+                    <a href="tel:+41 79 242 83 83">+41 79 242 83 83</a>
+                    <a href="malito:natascha.nikolic@inaut.ch">natascha.nikolic@inaut.ch</a>
                </div>
-               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
-                <div class="our-team-block">
-                    <div class="our-team-content">
-                        <ul class="our-team-ul">
-                            <li class="our-team-li"><strong class="our-team-strong">MAS</strong> systemisch-lösungsorientierte Kurzzeitberatung und -therapie, FHNW</li>
-                            <li class="our-team-li"><strong>Eidg. Dipl. Arbeitsagogin IfA</strong></li>
-                            <li class="our-team-li"><strong>Job Coach IfA</strong></li>
-                            <li class="our-team-li">15 Jahre Erfahrung im Job- und Wohncoaching von Menschen aus dem Spektrum, Leitung eines Wohnangebotes und eines Sozialtrainings</li>
-                        </ul>
-                    </div>
-                </div>
-                <h3 class="our-team-title">Annemarie Weber</h3>
-                <div class="our-team-text team-indent">Coach BE</div>
-                <div class="our-team-link our-team-text">
-                    <a href="tel:+41 79 242 48 78">+41 79 242 48 78</a>
-                </div>
-                <div class="our-team-link our-team-text">
-                    <a href="malito:annemarie.weber@inaut.ch">annemarie.weber@inaut.ch</a>
-                </div>
-                </div>
-                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block our-team-block-mob">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-right">
+                    <div class="our-team-block" style="background-image: url(img/natascha-nikolic.png);">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
-                                <li class="our-team-li"><strong>Somatic Experiencing®-Practitioner / SE-Trauma-Arbeit nach Dr. Peter Levine,</strong> Zentrum für Innere Ökologie Zürich</li>
-                                <li class="our-team-li"><strong>Craniosacral Therapeutin, </strong>Cranio Suisse®</li>
-                                <li class="our-team-li"><strong>Sozialpädagogin HF</strong></li>
-                                <li class="our-team-li">Seit über 20 Jahren im Coaching von Menschen mit psychischen Beeinträchtigungen tätig, Fachexpertin mit fundierter Erfahrung in niederschwelliger Begleitung und Krisenintervention</li>
+                                <li><strong>MAS</strong> systemisch-lösungsorientierte Kurzzeitberatung und -therapie, FHNW</li>
+                                <li><strong>Eidg. Dipl. Arbeitsagogin IfA</strong></li>
+                                <li><strong>Job Coach IfA</strong></li>
+                                <li>15 Jahre Erfahrung im Job- und Wohncoaching von Menschen aus dem Spektrum, Leitung eines Wohnangebotes und eines Sozialtrainings</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3 class="our-team-title">Annemarie Weber</h3>
+                    <div class="our-team-text team-indent">Coach BE</div>
+                    <a href="tel:+41 79 242 48 78">+41 79 242 48 78</a>
+                    <a href="malito:annemarie.weber@inaut.ch">annemarie.weber@inaut.ch</a>
+                </div>
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-left">
+                    <div class="our-team-block our-team-block-mob" style="background-image: url(img/natascha-nikolic.png);">
+                        <div class="our-team-content">
+                            <ul class="our-team-ul">
+                                <li><strong>Somatic Experiencing®-Practitioner / SE-Trauma-Arbeit nach Dr. Peter Levine,</strong> Zentrum für Innere Ökologie Zürich</li>
+                                <li><strong>Craniosacral Therapeutin, </strong>Cranio Suisse®</li>
+                                <li><strong>Sozialpädagogin HF</strong></li>
+                                <li>Seit über 20 Jahren im Coaching von Menschen mit psychischen Beeinträchtigungen tätig, Fachexpertin mit fundierter Erfahrung in niederschwelliger Begleitung und Krisenintervention</li>
                             </ul>
                         </div>
                     </div>
                     <img class="our-team-img-mob" src="img/uder_nik.png" alt="img">
                     <h3 class="our-team-title">Renate Perrin</h3>
                     <div class="our-team-text team-indent">Coach BE</div>
-                    <div class="our-team-link our-team-text">
-                        <a href="tel:+41 79 242 6868">+41 79 242 6868</a>
-                    </div>
-                    <div class="our-team-link our-team-text">
-                        <a href="malito:renate.perrin@inaut.ch">renate.perrin@inaut.ch</a>
-                    </div>
+                    <a href="tel:+41 79 242 6868">+41 79 242 6868</a>
+                    <a href="malito:renate.perrin@inaut.ch">renate.perrin@inaut.ch</a>
                </div>
-               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
-                <div class="our-team-block">
-                    <div class="our-team-content">
-                        <ul class="our-team-ul">
-                            <li class="our-team-li"><strong>CAS in Autismus-Spektrum-Störungen</strong> HFH, Zürich </li>
-                            <li class="our-team-li"><strong>CAS in Supported Employment / Arbeitsintegration,</strong> OST, St. Gallen</li>
-                            <li class="our-team-li"><strong>Dipl. Coach Institut PEA, Bern</strong></li>
-                            <li class="our-team-li">20 Jahre Erfahrung in der Leitung einer Wohngruppe im Sonderschulbereich, Sozialpädagogische Alltagsbegleitung und Förderung</li>
-                        </ul>
-                    </div>
-                </div>
-                <h3 class="our-team-title">Marianne Moser</h3>
-                <div class="our-team-text team-indent">Coach BE</div>
-                <div class="our-team-link our-team-text">
-                    <a href="tel:+41 79 242 38 38">+41 79 242 38 38</a>
-                </div>
-                <div class="our-team-link our-team-text">
-                    <a href="malito:marianne.moser@inaut.ch">marianne.moser@inaut.ch</a>
-                </div>
-                </div>
-                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block our-team-bg">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-right">
+                    <div class="our-team-block" style="background-image: url(img/natascha-nikolic.png);">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
-                                <li class="our-team-li"><strong>Personalfachfrau mit eidg. Fachausweis</strong></li>
-                                <li class="our-team-li"><strong>Weiterbildungen in den Bereichen Coaching, HR & Rechnungswesen</strong></li>
-                                <li class="our-team-li"> 7 Jahre Erfahrung als Jobcoach inkl. Akquise von Einsatzplätzen</li>
-                                <li class="our-team-li">20 Jahre Erfahrung im Personalwesen v.a.  in den Bereichen Personalrekrutierung, Unterstützung & Beratung der Vorgesetzen, Mitarbeitergespräche, Durchführung von Assessments</li>
+                                <li><strong>CAS in Autismus-Spektrum-Störungen</strong> HFH, Zürich </li>
+                                <li><strong>CAS in Supported Employment / Arbeitsintegration,</strong> OST, St. Gallen</li>
+                                <li><strong>Dipl. Coach Institut PEA, Bern</strong></li>
+                                <li>20 Jahre Erfahrung in der Leitung einer Wohngruppe im Sonderschulbereich, Sozialpädagogische Alltagsbegleitung und Förderung</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3 class="our-team-title">Marianne Moser</h3>
+                    <div class="our-team-text team-indent">Coach BE</div>
+                    <a href="tel:+41 79 242 38 38">+41 79 242 38 38</a>
+                    <a href="malito:marianne.moser@inaut.ch">marianne.moser@inaut.ch</a>
+                </div>
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-left">
+                    <div class="our-team-block" style="background-image: url(img/aunt_nikolic.png);">
+                        <div class="our-team-content">
+                            <ul class="our-team-ul">
+                                <li><strong>Personalfachfrau mit eidg. Fachausweis</strong></li>
+                                <li><strong>Weiterbildungen in den Bereichen Coaching, HR & Rechnungswesen</strong></li>
+                                <li> 7 Jahre Erfahrung als Jobcoach inkl. Akquise von Einsatzplätzen</li>
+                                <li>20 Jahre Erfahrung im Personalwesen v.a.  in den Bereichen Personalrekrutierung, Unterstützung & Beratung der Vorgesetzen, Mitarbeitergespräche, Durchführung von Assessments</li>
                             </ul>
                         </div>
                     </div>
                     <h3 class="our-team-title">Cornelia Pfister</h3>
                     <div class="our-team-text team-indent">Rechnungswesen und HR</div>
-                    <div class="our-team-link our-team-text">
-                        <a href="tel:+41 79 242 88 83">+41 79 242 88 83</a>
-                    </div>
-                    <div class="our-team-link our-team-text">
-                        <a href="malito:cornelia.pfister@inaut.ch">cornelia.pfister@inaut.ch</a>
-                    </div>
+                    <a href="tel:+41 79 242 88 83">+41 79 242 88 83</a>
+                    <a href="malito:cornelia.pfister@inaut.ch">cornelia.pfister@inaut.ch</a>
                </div>
-               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
-                <div class="our-team-block">
-                    <div class="our-team-content">
-                        <ul class="our-team-ul">
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li"><strong>text</strong></li>
-                            <li class="our-team-li"><strong>text</strong></li>
-                        </ul>
-                    </div>
-                </div>
-                <h3 class="our-team-title">Manuela Alleman</h3>
-                <div class="our-team-text team-indent">Administration</div>
-                <div class="our-team-link our-team-text">
-                    <a href="tel:+41 79 242 53 53">Tel.: +41 79 242 53 53</a>
-                </div>
-                <div class="our-team-link our-team-text">
-                    <a href="malito:manuela.alleman@inaut.ch">manuela.alleman@inaut.ch</a>
-                </div>
-                </div>
-                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-left">
-                    <div class="our-team-block our-team-martina">
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-right">
+                    <div class="our-team-block" style="background-image: url(img/natascha-nikolic.png);">
                         <div class="our-team-content">
                             <ul class="our-team-ul">
-                                <li class="our-team-li"><strong>Studentin Bachelor of Sience in Business Administration</strong></li>
-                                <li class="our-team-li"><strong>Kauffrau mit Berufsmaturität Wirtschaft</strong></li>
+                                <li>text</li>
+                                <li>text</li>
+                                <li>text</li>
+                                <li><strong>text</strong></li>
+                                <li><strong>text</strong></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3 class="our-team-title">Manuela Alleman</h3>
+                    <div class="our-team-text team-indent">Administration</div>
+                    <a href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
+                    <a href="malito:manuela.alleman@inaut.ch">manuela.alleman@inaut.ch</a>
+                </div>
+                <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-left">
+                    <div class="our-team-block" style="background-image: url(img/natascha-nata.png);">
+                        <div class="our-team-content">
+                            <ul class="our-team-ul">
+                                <li><strong>Studentin Bachelor of Sience in Business Administration</strong></li>
+                                <li><strong>Kauffrau mit Berufsmaturität Wirtschaft</strong></li>
                             </ul>
                         </div>
                     </div>
                     <h3 class="our-team-title">Martina Keller</h3>
                     <div class="our-team-text team-indent">Assistentin der Geschäftsleitung / Administration</div>
-                    <div class="our-team-link our-team-text">
-                        <a href="tel:+41 79 242 44 11">+41 79 242 44 11</a>
-                    </div>
-                    <div class="our-team-link our-team-text">
-                        <a href="malito:martina.keller@inaut.ch">martina.keller@inaut.ch</a>
-                    </div>
+                    <a href="tel:+41 79 242 44 11">+41 79 242 44 11</a>
+                    <a href="malito:martina.keller@inaut.ch">martina.keller@inaut.ch</a>
                </div>
-               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-indent our-team-right">
-                <div class="our-team-block our-team-alexandra">
-                    <div class="our-team-content">
-                        <ul class="our-team-ul">
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li">text</li>
-                            <li class="our-team-li"><strong>text</strong></li>
-                            <li class="our-team-li"><strong>text</strong></li>
-                        </ul>
+               <div class="col-12 col-md-12 col-sm-6 col-lg-6 our-team-item our-team-right">
+                    <div class="our-team-block" style="background-image: url(img/alexandra.png);">
+                        <div class="our-team-content">
+                            <ul class="our-team-ul">
+                                <li>text</li>
+                                <li>text</li>
+                                <li>text</li>
+                                <li><strong>text</strong></li>
+                                <li><strong>text</strong></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <h3 class="our-team-title">Alexandra Spiess</h3>
-                <div class="our-team-text team-indent">Coach AG/ZH/LU</div>
-                <div class="our-team-link our-team-text">
-                    <a href="tel:+41 79 242 39 39">Tel.: +41 79 242 39 39</a>
-                </div>
-                <div class="our-team-link our-team-text">
+                    <h3 class="our-team-title">Alexandra Spiess</h3>
+                    <div class="our-team-text team-indent">Coach AG/ZH/LU</div>
+                    <a href="tel:+41 79 242 39 39">+41 79 242 39 39</a>
                     <a href="malito:alexandra.spiess@inaut.ch">alexandra.spiess@inaut.ch</a>
-                </div>
                 </div>
            </div>
        </div>
@@ -287,7 +255,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
