--- a/app/job-search.html
+++ b/app/job-search.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -56,7 +56,7 @@
 	<div class="container breadcrumbs-container">
         <div class="breadcrumbs-way">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="angebot.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Suche eines Ausbildungsplatzes</a>
         </div>
         <div class="breadcrumbs-item">
@@ -77,7 +77,7 @@
 	</div>
     <div class="container breadcrumbs-back">
         <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="angebot.html">
+            <a class="breadcrumbs-img" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="breadcrumbs-text">Zurück</div>
@@ -110,7 +110,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
