--- a/app/__coaching-training.html
+++ b/app/__coaching-training.html
@@ -1,9 +1,22 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-us">
 @@include('_head.html')
 <body>
 	@@include('_header.html')
 	@@include('_coaching-training.html')
+	@@include('_footer.html')
+	@@include('_scripts.html')
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en-us">
+@@include('_head.html')
+<body>
+	@@include('_header.html')
+	<main class=main>
+		@@include('_index-content.html')
+	</main>
 	@@include('_footer.html')
 	@@include('_scripts.html')
 </body>
