--- a/app/_header.html
+++ b/app/_header.html
@@ -5,7 +5,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
