--- a/app/_hire-person.html
+++ b/app/_hire-person.html
@@ -23,7 +23,7 @@
 	</div>
     <div class="container breadcrumbs-back">
         <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="angebot.html">
+            <a class="breadcrumbs-img" href="for-companies.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="breadcrumbs-text">Zurück</div>
