--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -108,7 +108,7 @@
             <a class="home-btn blog-article-btn" href="#">Zur Anmeldung</a>
 
         </div>
-        <div class="blog-article-block">
+        <div class="blog-article-block" style="background-image: url(img/unclem.png);">
             <h3>Dein Coach – Res Kocher</h3>
             <ul>
                 <li>Coach Informatik</li>
@@ -161,7 +161,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
