--- a/app/contact.html
+++ b/app/contact.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -93,7 +93,7 @@
     </div>
     <div class="container breadcrumbs-back arrow-left-mob">
         <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="angebot.html">
+            <a class="breadcrumbs-img" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="breadcrumbs-text">Zurück</div>
@@ -126,7 +126,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
