--- a/app/current.html
+++ b/app/current.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -124,7 +124,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
