--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 		</a>
 		<div class="header-body">
 			<ul class="menu">
-				<li><a href="angebot.html">Angebot</a></li>
+				<li><a href="offer.html">Angebot</a></li>
 				<li><a href="for-companies.html">Für Unternehmen</a></li>
 				<li><a href="about-us.html">Über uns</a></li>
 				<li><a href="current.html">Aktuelles</a></li>
@@ -54,7 +54,48 @@
 </header>
 	<!-- Start Page -->
 <div class="container pt-5 pb-5">
-    <div class="row">
+    <ul>
+        <li>
+            <h1>
+                <strong>home</strong>
+            </h1>
+            <a class="general-link" href="home.html">home</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="search-of-trial-missions.html">search of trial missions</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="job-search.html">job search</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="looking-job.html">looking job</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="coaching-training.html">coaching training</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="professional-clarification.html">professional clarification</a>
+        </li>
+        <li>
+            <span>zum Angebot</span> - <a class="general-link" href="coaching-job.html">coaching job</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="hire-person.html">hire person</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="support-in-everyday-work.html">support in everyday work</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="advanced-training.html">advanced training</a>
+        </li>
+        <li>
+            <span>mehr Erfahren</span> - <a class="general-link" href="blog-article.html">blog article</a>
+        </li>
+        <li>
+           <span>zum Stelleninserat</span> - <a class="general-link" href="job-description.html">job description</a>
+        </li>
+     </ul>
+    <!-- <div class="row">
         <div class="col-4">
             <ul>
                 <li class="mb-3">
@@ -148,7 +189,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
 </div>
 
 	<footer class="footer">
@@ -177,7 +218,7 @@
                     <ul>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
-                            <a href="angebot.html">Angebot</a>
+                            <a href="offer.html">Angebot</a>
                         </li>
                         <li class="footer-block">
                             <img src="img/svg/arrows.svg" alt="img">
