--- a/app/_home.html
+++ b/app/_home.html
@@ -3,7 +3,7 @@
 		<div class="swiper-container mySwiper">
 			<div class="swiper-wrapper">
 			  <div class="swiper-slide">
-				<div class="home-content">
+				<div class="home-content" style="background-image: url(img/top_home.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
 						<div>Ihre Stellensuche</div>
@@ -13,7 +13,7 @@
 				</div>
 			  </div>
 			  <div class="swiper-slide">
-				<div class="home-content home-block-second">
+				<div class="home-content" style="background-image: url(img/profess.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
 						<div>Professionelle Unterstützung bei</div>
@@ -23,7 +23,7 @@
 				</div>
 			  </div>
 			  <div class="swiper-slide">
-				<div class="home-content home-block-third">
+				<div class="home-content" style="background-image: url(img/unter.png);">
 					<div class="home-title">inAut GmbH</div>
 					<div class="home-text">
 						<div>Unterstützung im Arbeitsalltag und</div>
@@ -184,7 +184,7 @@
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
-						<div class="our-customers-content img-cover">
+						<div class="our-customers-content" style="background-image: url(img/autimus.png);">
 							<h3 class="our-customers-title">«Autismus ist kein Systemfehler, sondern ein anderes Betriebssystem.»</h3>
 							<div class="home-title">Hans Muster, Winterthur</div>
 						</div>
@@ -196,7 +196,7 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
-						<div class="our-customers-content markus">
+						<div class="our-customers-content" style="background-image: url(img/markus.png);">
 							<h3 class="our-customers-title markus-title">«Bei inAut steht der Mensch im Mittelpunkt Gemeinsam suchen wir eine Lösung um Menschen mit Autismus eine Perspektive für die Zukunft zu bieten. Die Zusammenarbeit mit InAut ist sehr angenehm.» </h3>
 							<div class="home-title">Markus Löffel, Gerber macht’s</div>
 						</div>
@@ -208,7 +208,7 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="home-title current-title">Unsere Kunden</div>
-						<div class="our-customers-content img-cover">
+						<div class="our-customers-content" style="background-image: url(img/autimus.png);">
 							<h3 class="our-customers-title our-customers-heading">«Die Zusammenarbeit mit inAut zeichnet sich durch ein durchdachtes Konzept, gepaart mit einem pragmatischen, einfachen und unkomplizierten Vorgehen aus. Bei Problemen haben wir jederzeit einen festen Ansprechpartner, welcher uns schnell, kompetent und mit viel Fachwissen unterstützt. Ihre Klienten führt die inAut mit viel Geschick, Fingerspitzengefühl und grossem Engagement zum individuellen Erfolg.» </h3>
 							<div class="home-title">Stephan Zigerli, WBF ISCeco</div>
 						</div>
