--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -119,7 +119,7 @@
 	</div>
     <div class="container breadcrumbs-back">
         <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="angebot.html">
+            <a class="breadcrumbs-img" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
             <div class="breadcrumbs-text">Zurück</div>
